--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -21,6 +21,27 @@ html, body {
   -ms-overflow-style: none;  /* IE and Edge */
     scrollbar-width: none;  /* Firefox */
 }
+
+
+.swiper {
+    width: 100%;
+    height: 100%;
+  }
+
+  .swiper-slide {
+    text-align: center;
+    font-size: 18px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .swiper-slide img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
 /* .max-w-1440 {
     width:100%;
     max-width: 1440px;
@@ -215,7 +236,7 @@ html, body {
       transform: rotate(360deg);
     }
   }
-  
+
 
 
 /* spin the wheel */
@@ -346,7 +367,7 @@ body.swal2-height-auto {height: 100%!important;}
 
 .services-ticker-block {
   position: relative;
-  display:flex; 
+  display:flex;
   align-items:center;
   overflow-x: hidden;
 }
